Fixed search icon to overlap with search bar

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   width: 100vw;
   height: 100vh;
   background: linear-gradient(45deg, #f7a5a5, #531c2a);
-  background-size: 200% 200%; 
+  background-size: 200% 200%;
   animation: gradient-flow 3.5s infinite ease-in-out;
 }
 
@@ -67,7 +67,6 @@ header img {
 .search {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   height: 20%;
   width: 100%;
   align-items: center;
@@ -90,15 +89,16 @@ header img {
 }
 
 .search i {
-  display: inline-flex;   
+  display: inline-flex;
   color: white;
   align-items: center;
   justify-content: center;
-  padding: 0.75rem;
-  margin-top: 2rem;                     /* grows the background area */
-  font-size: 2rem;                      /* adjust icon size */
-  background: linear-gradient(135deg, #1b1b1b 0%, #2c2c2c 35%, #3a3a3a 70%, #080808 100%);
-  border-radius: 999px;       
+  padding: 2rem; /* grows the background area */
+  font-size: 4rem; /* adjust icon size */
+  background: rgba(20, 20, 20, 0.7);
+  border-radius: 999px;
+  position: absolute;
+  right: 9rem;
 }
 
 .search input:focus {
@@ -114,11 +114,11 @@ header img {
   text-align: center;
 }
 
-.search h1 {
+h1 {
   font-family: Poppins;
   color: white;
   font-size: 4rem;
-  text-align: center
+  text-align: center;
   margin-top: 6rem;
 }
 
@@ -127,7 +127,6 @@ h2 {
   color: white;
   font-size: 3rem;
   text-align: center;
-  margin-top: 10rem;
 }
 
 .filter {
